-*- coding: utf-8; fill-column: 68 -*-

=======
CHANGES
=======
0.5.3
=====
- orm
    - Query now implements __clause_element__() which produces
      its selectable, which means a Query instance can be accepted 
      in many SQL expressions, including col.in_(query), 
      union(query1, query2), select([foo]).select_from(query), 
      etc.

    - improvements to the "determine direction" logic of 
      relation() such that the direction of tricky situations 
      like mapper(A.join(B)) -> relation-> mapper(B) can be
      determined.
      
    - When flushing partial sets of objects using session.flush([somelist]),
      pending objects which remain pending after the operation won't
      inadvertently be added as persistent. [ticket:1306]
     
    - Added "post_configure_attribute" method to InstrumentationManager,
      so that the "listen_for_events.py" example works again.
      [ticket:1314]
      
- sql
    - Fixed missing _label attribute on Function object, others
      when used in a select() with use_labels (such as when used
      in an ORM column_property()).  [ticket:1302]

    - anonymous alias names now truncate down to the max length
      allowed by the dialect.  More significant on DBs like
      Oracle with very small character limits. [ticket:1309]
      
    - the __selectable__() interface has been replaced entirely
      by __clause_element__().

    - The per-dialect cache used by TypeEngine to cache
      dialect-specific types is now a WeakKeyDictionary.
      This to prevent dialect objects from 
      being referenced forever for an application that 
      creates an arbitrarily large number of engines
      or dialects.   There is a small performance penalty
      which will be resolved in 0.6.  [ticket:1299]

- postgres
    - Index reflection won't fail when an index with 
      multiple expressions is encountered.
    
0.5.2
======

- orm
    - Further refined 0.5.1's warning about delete-orphan cascade